--- a/backend/task_managment_system/src/main/resources/application.yml
+++ b/backend/task_managment_system/src/main/resources/application.yml
@@ -22,12 +22,13 @@ token:
 
 # CORS Configuration
 cors:
-  allowed-origins: http://localhost:8642,http://localhost:5173,http://localhost:5174
+  allowed-origins: http://localhost:5173
   allowed-methods: GET,POST,PUT,DELETE,PATCH,OPTIONS
   allowed-headers: Authorization,Content-Type,Accept,X-Requested-With
   exposed-headers: Authorization,Content-Type
   allow-credentials: true
   max-age: 3600
+
 
 # Swagger/OpenAPI Configuration
 springdoc:
